[package]
name = "bevy_retro_camera"
version = "1.0.1"
edition = "2021"
authors = ["Joffrey Bienvenu <joffreybvn@gmail.com>"]
license = "MIT"
description = "Scaled pixel-perfect rendering camera for Bevy"
keywords = ["pixel", "camera", "rendering", "bevy"]
categories = ["game-development"]
exclude = ["/docs"]
repository = "https://github.com/celerysaltgames/bevy_retro_camera"
homepage = "https://github.com/celerysaltgames/bevy_retro_camera"

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_render", "bevy_core_pipeline"] }

[dev-dependencies]
bevy = "0.8"
